syntax = "proto3";

option csharp_namespace = "GrpcServiceTest";

// The greeting service definition.
service Customer {
  // Sends a greeting
  rpc GetCustomerInfo (CustomerLookupModel) returns (CustomerModel);
}

// The request message containing the user's name.
message CustomerLookupModel {
  int32 userId = 1;
}

// The response message containing the greetings.
message CustomerModel {
  string firstName = 1;
  string lastName = 2;
  string emailAddress = 3;
  bool isActive = 4;
  string age = 5;
}
